# cs7630_robotics

./: README  setup.sh
Vision Functions/: colorWheelHSV.7z  findBlob.cpp  findDark.cpp
raptor/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  manifest.xml~  stack.xml
wpi-rail-ros-pkg_old/rovio/rovio_shared/: CMakeLists.txt  mainpage.dox  manifest.xml  manifest.xml~
wpi-rail-ros-pkg_old/rovio/rovio_shared/include/rovio_shared/: rovio_http.h
wpi-rail-ros-pkg_old/rovio/rovio_shared/msg_gen/cpp/include/rovio_shared/: man_drv.h
wpi-rail-ros-pkg_old/rovio/rovio_shared/msg_gen/lisp/: _package.lisp  _package_man_drv.lisp  man_drv.lisp  rovio_shared-msg.asd
wpi-rail-ros-pkg_old/rovio/rovio_shared/src/: rovio_http.cpp
wpi-rail-ros-pkg_old/rovio/rovio_shared/src/rovio_shared/msg/: __init__.py  _man_drv.py
wpi-rail-ros-pkg_old/rovio/rovio_shared/src/rovio_shared/srv/: __init__.py  _head_ctrl.py  _man_drv_srv.py  _rovio_position.py  _twist_srv.py  _wav_play.py
wpi-rail-ros-pkg_old/rovio/rovio_shared/srv/: head_ctrl.srv  man_drv_srv.msg  rovio_position.srv  rovio_position.srv~  twist_srv.srv
wpi-rail-ros-pkg_old/rovio/rovio_shared/srv_gen/cpp/include/rovio_shared/: head_ctrl.h  man_drv_srv.h  rovio_position.h  twist_srv.h  wav_play.h
wpi-rail-ros-pkg_old/rovio/rovio_shared/srv_gen/lisp/: _package.lisp  _package_head_ctrl.lisp  _package_man_drv_srv.lisp  _package_rovio_position.lisp  _package_twist_srv.lisp  _package_wav_play.lisp  head_ctrl.lisp  man_drv_srv.lisp  rovio_position.lisp  rovio_shared-srv.asd  twist_srv.lisp  wav_play.lisp
(+278 files in other folders)
